--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:padding="20dp">
 
     <androidx.appcompat.widget.AppCompatTextView
         android:id="@+id/login_Title"
@@ -51,12 +52,12 @@
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/button_login"
         android:layout_width="0dp"
-        android:layout_height="60dp"
+        android:layout_height="50dp"
         android:layout_marginVertical="30dp"
         android:background="@drawable/login_box_style"
         android:text="로그인"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#FFFFFF"
+        android:textSize="18sp"
         app:layout_constraintLeft_toLeftOf="@id/login_uid"
         app:layout_constraintRight_toRightOf="@id/login_uid"
         app:layout_constraintTop_toBottomOf="@id/login_password" />
