--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -50,7 +50,7 @@
         app:layout_constraintTop_toBottomOf="@+id/login_uid" />
 
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button_login"
+        android:id="@+id/login_btn"
         android:layout_width="0dp"
         android:layout_height="50dp"
         android:layout_marginVertical="30dp"
@@ -72,7 +72,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/button_login" />
+        app:layout_constraintTop_toBottomOf="@id/login_btn" />
 
     <TextView
         android:id="@+id/login_signup"
@@ -101,7 +101,7 @@
         app:layout_constraintTop_toBottomOf="@id/login_signup" />
 
     <TextView
-        android:id="@+id/login_find_uid"
+        android:id="@+id/login_find_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/custom_button"
@@ -112,11 +112,11 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#2196F3"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@id/login_find_password"
+        app:layout_constraintRight_toLeftOf="@id/login_find_pwd"
         app:layout_constraintTop_toBottomOf="@id/login_text2" />
 
     <TextView
-        android:id="@+id/login_find_password"
+        android:id="@+id/login_find_pwd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@drawable/custom_button"
@@ -126,7 +126,7 @@
         android:text="비밀번호 찾기"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="#2196F3"
-        app:layout_constraintLeft_toRightOf="@id/login_find_uid"
+        app:layout_constraintLeft_toRightOf="@id/login_find_id"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/login_text2" />
 
