--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -57,12 +57,12 @@
             </androidx.cardview.widget.CardView>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/signup_uid"
+                android:id="@+id/signup_id"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/edit_uid"
+                    android:id="@+id/signup_edt_id"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="아이디를 입력해주세요"
@@ -70,13 +70,13 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/signup_password"
+                android:id="@+id/signup_pwd"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:passwordToggleEnabled="true">
 
                 <EditText
-                    android:id="@+id/edit_password"
+                    android:id="@+id/signup_edt_pwd"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="비밀번호를 입력해주세요"
@@ -84,13 +84,13 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/signup_password_check"
+                android:id="@+id/signup_pwd_chk"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:passwordToggleEnabled="true">
 
                 <EditText
-                    android:id="@+id/edit_password_check"
+                    android:id="@+id/signup_edt_pwd_chk"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="비밀번호를 다시 한번 입력해주세요"
@@ -107,11 +107,11 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintHorizontal_chainStyle="spread"
                     app:layout_constraintLeft_toLeftOf="parent"
-                    app:layout_constraintRight_toLeftOf="@+id/signup_nickname_check"
+                    app:layout_constraintRight_toLeftOf="@+id/signup_nickname_chk"
                     app:layout_constraintTop_toTopOf="parent">
 
                     <EditText
-                        android:id="@+id/edit_nickname"
+                        android:id="@+id/signup_edt_nickname"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="닉네임을 입력해주세요"
@@ -119,14 +119,14 @@
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <Button
-                    android:id="@+id/signup_nickname_check"
+                    android:id="@+id/signup_nickname_chk"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="@drawable/custom_button"
                     android:text="중복확인"
-                    app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintLeft_toRightOf="@+id/signup_nickname"
-                    app:layout_constraintRight_toRightOf="parent" />
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -135,7 +135,7 @@
                 android:layout_height="wrap_content">
 
                 <EditText
-                    android:id="@+id/edit_email"
+                    android:id="@+id/signup_edt_email"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="이메일을 입력해주세요"
@@ -144,7 +144,7 @@
 
 
             <Button
-                android:id="@+id/signup_submit"
+                android:id="@+id/signup_btn"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginVertical="20dp"
