--- a/app/src/main/res/layout/fragment_group_list.xml
+++ b/app/src/main/res/layout/fragment_group_list.xml
@@ -1,50 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".fragment.GroupListFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:paddingHorizontal="20dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="20dp">
 
         <TextView
             android:id="@+id/button_group_title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:text="여행그룹"
             android:textColor="@color/colorFocusBottomMenu"
             android:textSize="20dp"
-            android:layout_marginBottom="15dp"
-            android:layout_marginTop="15dp"
-            android:text="여행그룹"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
+            app:layout_constraintTop_toTopOf="parent" />
+
         <Button
-            android:id="@+id/colorFocusBottomMenu"
-            android:backgroundTint="@color/colorFocusBottomMenu"
-            android:layout_marginBottom="15dp"
-            android:layout_marginTop="15dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            android:background="@drawable/ic_add_black_24dp"
+            android:id="@+id/btn_goto_group_create"
             android:layout_width="26dp"
-            android:layout_height="26dp"/>
+            android:layout_height="26dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginBottom="15dp"
+            android:background="@drawable/ic_add_black_24dp"
+            android:backgroundTint="@color/colorFocusBottomMenu"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:id="@+id/btn_goto_group_main"
-        android:text="임시 그룹으로 이동"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:text="임시 그룹으로 이동" />
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
 </LinearLayout>
