--- a/app/src/main/res/layout/fragment_group_list.xml
+++ b/app/src/main/res/layout/fragment_group_list.xml
@@ -44,6 +44,7 @@
         android:text="임시 그룹으로 이동" />
 
     <ListView
+        android:id="@+id/listView_group"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
