--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -322,5 +322,50 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
+        <LinearLayout
+            android:orientation="vertical"
+            android:id="@+id/layout_home_plan"
+            android:paddingVertical="20dp"
+            android:overScrollMode="never"
+            android:layout_marginVertical="10dp"
+            android:layout_marginHorizontal="20dp"
+            android:elevation="4dp"
+            android:background="@drawable/home_box_style"
+            android:clickable="true"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+                android:id="@+id/layout_home_plan_rcy"
+                android:orientation="vertical"
+                android:visibility="visible"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/tv_home_plan_group"
+                    android:textAlignment="center"
+                    android:text="ㅇㅇㅇㅇ의 일정"
+                    android:textSize="16dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rcv_home_plan"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_marginHorizontal="25dp"/>
+            </LinearLayout>
+            <TextView
+                android:id="@+id/tv_home_plan_info"
+                android:visibility="visible"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                android:textAlignment="center"
+                android:text="주그룹이 없습니다"
+                android:textSize="16dp"
+                android:padding="24dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+        </LinearLayout>
     </LinearLayout>
 </ScrollView>
