--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -331,26 +331,26 @@
             android:layout_marginHorizontal="20dp"
             android:elevation="4dp"
             android:background="@drawable/home_box_style"
-            android:clickable="true"
+            android:clickable="false"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <LinearLayout
                 android:id="@+id/layout_home_plan_rcy"
                 android:orientation="vertical"
-                android:visibility="visible"
+                android:visibility="gone"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
+                    android:textStyle="bold"
                     android:id="@+id/tv_home_plan_group"
                     android:textAlignment="center"
-                    android:text="ㅇㅇㅇㅇ의 일정"
                     android:textSize="16dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"/>
                 <androidx.recyclerview.widget.RecyclerView
                     android:id="@+id/rcv_home_plan"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginHorizontal="25dp"/>
             </LinearLayout>
             <TextView
@@ -361,6 +361,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 android:textAlignment="center"
+                android:nestedScrollingEnabled="false"
                 android:text="주그룹이 없습니다"
                 android:textSize="16dp"
                 android:padding="24dp"
@@ -368,4 +369,4 @@
                 android:layout_height="wrap_content"/>
         </LinearLayout>
     </LinearLayout>
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
