--- a/app/src/main/res/layout/activity_group_main.xml
+++ b/app/src/main/res/layout/activity_group_main.xml
@@ -36,12 +36,21 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
+            android:id="@+id/button_group_more"
+            android:layout_width="26dp"
+            android:layout_height="26dp"
+            android:background="@drawable/ic_more_horiz_black_24dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
             android:id="@+id/button_group_setting"
             android:layout_width="26dp"
             android:layout_height="26dp"
             android:visibility="visible"
+            android:layout_marginHorizontal="20dp"
             android:background="@drawable/selector_setting_img"
-            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/button_group_more"
             app:layout_constraintTop_toTopOf="parent"/>
 
         <Button
@@ -52,6 +61,7 @@
             android:background="@drawable/selector_chat_img"
             app:layout_constraintRight_toLeftOf="@+id/button_group_setting"
             app:layout_constraintTop_toTopOf="parent" />
+
 
         <View
             android:id="@+id/group_chat_alarm"
