--- a/app/src/main/res/layout/activity_group_main.xml
+++ b/app/src/main/res/layout/activity_group_main.xml
@@ -91,6 +91,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_all_plan"
+        android:background="#fff"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="5dp"
