--- a/app/src/main/res/layout/activity_group_expense.xml
+++ b/app/src/main/res/layout/activity_group_expense.xml
@@ -76,13 +76,25 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/group_expense_constLayout" />
 
+    <TextView
+        android:id="@+id/expenses_no_item"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:gravity="center"
+        android:text="가계부를 만들어주세요!"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/group_expense_constLayout" />
+
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView_all_expense"
+        android:id="@+id/recyclerView_all_expenses"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="16dp"
+        android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/group_expense_totalAmount" />
