--- a/app/src/main/res/layout/recycler_item_all_expense.xml
+++ b/app/src/main/res/layout/recycler_item_all_expense.xml
@@ -3,10 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:layout_marginVertical="16dp">
 
     <TextView
-        android:id="@+id/all_expense_list_title"
+        android:id="@+id/all_expenses_list_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="12월 24일"
@@ -16,19 +17,19 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <RelativeLayout
-        android:id="@+id/all_expense_list_line"
+        android:id="@+id/all_expenses_list_line"
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginTop="10dp"
         android:layout_marginBottom="10dp"
         android:background="#000000"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/all_expense_list_title"></RelativeLayout>
+        app:layout_constraintTop_toBottomOf="@+id/all_expenses_list_title"></RelativeLayout>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView_expense"
+        android:id="@+id/recyclerView_expenses"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingHorizontal="15dp"
-        app:layout_constraintTop_toBottomOf="@+id/all_expense_list_line" />
+        app:layout_constraintTop_toBottomOf="@+id/all_expenses_list_line" />
 </androidx.constraintlayout.widget.ConstraintLayout>
