--- a/app/src/main/res/layout/recycler_item_expense.xml
+++ b/app/src/main/res/layout/recycler_item_expense.xml
@@ -15,11 +15,11 @@
         android:textSize="16dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toLeftOf="@+id/expenses_list_price"
+        app:layout_constraintRight_toLeftOf="@+id/expenses_list_cost"
         app:layout_constraintHorizontal_chainStyle="spread_inside"/>
 
     <TextView
-        android:id="@+id/expenses_list_price"
+        android:id="@+id/expenses_list_cost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="2,200원"
